gallery home page complete

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -27,7 +27,7 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <img class="img-responsive" src="http://placehold.it/750x600" alt="">
             </div>
             <div class="col-md-6">
                 <h2>About Solid Solutions Design</h2>
@@ -37,13 +37,24 @@
                 Majority of the products are designed and manufactured at our facility located in Chamblee, Georgia.
                 </p>
                 <p>
-                We offer many unique services that include designing and manufacturing custom fixtures based upon customer request.
+                We offer many unique <%= link_to "services", home_services_path %> that include designing and manufacturing custom fixtures based upon customer request.
                 </p>
+                <p><strong>Let Us Build Your Dream Business</strong></p>
+                <ul>
+                    <li>Draft</li>
+                    <li>Design</li>
+                    <li>Manufacture</li>
+                    <li>Deliver</li>
+                </ul>
+                <p>
+                Solid Solutions Design will help design, engineer, and build all your cabinet and fixture needs. Our products are handmade from raw material and may be customized per customer request. Whether it is a starting small business or simply remodeling, we are guaranteed to provide quality designs and solutions to satisfy your demands.</p>
+            </div>
             </div>
         </div>
+        
         <!-- /.row -->
 
-        <!-- Team Members -->
+        <!-- Team Members (Do not Display yet)
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Our Team</h2>
@@ -165,7 +176,7 @@
         </div>
         <!-- /.row -->
 
-        <!-- Our Customers -->
+        <!-- Our Customers (DO NOT DISPLAY YET)
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Our Customers</h2>
@@ -190,7 +201,7 @@
             </div>
         </div>
         <!-- /.row -->
-
+        
         <hr>
 
     </div>
