--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
                         <%= link_to "Services", home_progress_path %>
                     </li>
                     <li>
-                        <%= link_to "Product", home_progress_path %>
+                        <%= link_to "Products", home_progress_path %>
                     </li>
                     <li>
                         <%= link_to "Gallery", home_progress_path %>
