created/modified kitchens gallery

--- a/app/views/gallery/residential.html.erb
+++ b/app/views/gallery/residential.html.erb
@@ -35,7 +35,7 @@
                 <h3>Kitchens</h3>
                 <h4></h4>
                 <p></p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
+                <a class="btn btn-primary" <%= link_to "View Gallery", gallery_kitchens_path%></a>
             </div>
         </div>
         <!-- /.row -->
