--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <%= link_to "About", home_progress_path %>
+                        <%= link_to "About", home_about_path %>
                     </li>
                     <li>
                         <%= link_to "Services", home_progress_path %>
@@ -28,7 +28,7 @@
                         <%= link_to "Products", home_progress_path %>
                     </li>
                     <li>
-                        <%= link_to "Gallery", home_progress_path %>
+                        <%= link_to "Gallery", home_gallery_path %>
                     </li>
                     <li> 
                         <%= link_to "Contact", home_contact_path %>
