--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="portfolio-item.html">
-                    <%= link_to image_tag("clgallery/Cheang DDS (5).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300') %>
+                    <%= link_to image_tag("clgallery/Cheang DDS (5).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), gallery_clinical_path %>
                 </a>
             </div>
             <div class="col-md-5">
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="portfolio-item.html">
-                    <%= link_to image_tag("cogallery/mallkiosk(1).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300') %>
+                    <%= link_to image_tag("cogallery/mallkiosk(1).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), gallery_commercial_path %>
                 </a>
             </div>
             <div class="col-md-5">
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="portfolio-item.html">
-                    <%= link_to image_tag("rgallery/Ulhmann_kitchen(3).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300') %>
+                    <%= link_to image_tag("rgallery/Ulhmann_kitchen(3).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), gallery_residential_path %>
                 </a>
             </div>
             <div class="col-md-5">
