--- a/app/views/gallery/mallkiosks.erb
+++ b/app/views/gallery/mallkiosks.erb
@@ -13,13 +13,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Kitchens
-                    <small>Residential Gallery</small>
+                <h1 class="page-header">Mall Kiosks
+                    <small>Commercial Gallery</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><%= link_to "Home", root_path %></li>
-                    <li><%= link_to "Residential Gallery", gallery_residential_path %></li>
-                    <li class="active">Kitchens</li>
+                    <li><%= link_to "Commercial Gallery", gallery_commercial_path %></li>
+                    <li class="active">Mall Kiosks</li>
                 </ol>
             </div>
         </div>
@@ -84,10 +84,6 @@
                 <h3>Kitchens</h3>
                 <p>The Kitchens featured in this gallery involve the collaboration of Solid Solutions Design LLC and
                 Joshua Cabinetry.</p>
-                
-                <!-- Projects Row Test -->
-                
-                
                 <!-- Projects Row Ulhmann-->
         <div class="row">
             <div class="col-md-3 img-portfolio">
@@ -132,7 +128,14 @@
                 </a>
             </div>
         </div>
-              
+                <h3>Project Details</h3>
+                <ul>
+                    <li>Lorem Ipsum</li>
+                    <li>Dolor Sit Amet</li>
+                    <li>Consectetur</li>
+                    <li>Adipiscing Elit</li>
+                </ul>
+            </div>
 
         </div>
         <!-- /.row -->
