--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -130,7 +130,7 @@
                 Solid Solutions Design will help design, engineer, and build all your cabinet and fixture needs. Our products are handmade from raw material and may be customized per customer request. Whether it is a starting small business or simply remodeling, we are guaranteed to provide quality designs and solutions to satisfy your demands.</p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x275" alt="">
+                    <center><%= image_tag("ssdSamps.png", :class => 'img-responsive') %></center>
             </div>
         </div>
         <!-- /.row -->
