--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
                         <%= link_to "About", home_about_path %>
                     </li>
                     <li>
-                        <%= link_to "Services", home_progress_path %>
+                        <%= link_to "Services", home_services_path %>
                     </li>
                     <li>
                         <%= link_to "Products", home_progress_path %>
